# neurocore-public

./: README.md  auth.json
configs/train/: cluster_spec.json  train.json
hybrids/glucose/glucose/simp/: Neuro.cc  Neuro.h
hybrids/minisat/: CMakeLists.txt  neurominisat.cxx  neurosolver.cxx  neurosolver.h  setup.py
python/: auth.py  evaluate_cdcl.py  gen_data.py  neurosat.py  pyroserver.py  sutil.py  tftd.py  tfutil.py  train.py  util.py
server/: neurosat.proto  neurosat_client.py  neurosat_server.py
solver/: CMakeLists.txt  setup.py  solver.cxx  test_lits.py  test_solver.py
weights/: cfg.json  checkpoint  graph.pbtxt  model.ckpt-0.data-00000-of-00001  model.ckpt-0.index  model.ckpt-158338.data-00000-of-00001  model.ckpt-158338.index  model.ckpt-325547.data-00000-of-00001  model.ckpt-325547.index  model.ckpt-493534.data-00000-of-00001  model.ckpt-493534.index  model.ckpt-661581.data-00000-of-00001  model.ckpt-661581.index
